--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Lo stipendio di un somelier di sassi varia dai 2.500€ mensili per un assaggiat
 <a href=https://www.youtube.com/watch?v=xvFZjo5PgG0><h2>Clicca qui</h2></a> <h4>per acquistare il nostro corso su “Come affinare il tuo palato” </h4> 
 </div>
 <div id="fotopiedi">
-<img src="sassi.JPG" alt="Immagine bloccata dal browser LOL" width="550" height="350">
+<img src="sassi.jpg" alt="Immagine bloccata dal browser LOL" width="550" height="350">
 </div>    
 </body>
 </html>
