--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Lo stipendio di un somelier di sassi varia dai 2.500€ mensili per un assaggiat
      
 </div>
 <div id="fotopiedi">
-<img src="sassi.jfif" alt="Immagine bloccata dal browser" width="550" height="350">
+<img src="sassi.jpg" alt="Immagine bloccata dal browser" width="550" height="350">
 </div>    
 </body>
 </html>
