--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ cancella
 
 <p> <h3> Inserire una e-mail </h3> </p>
 
-<form action=troll.html method="get">
+<form action=https://samuel095383.github.io/SOMELIERDISASSI/troll.html method="get">
 <div id="email">
 <input id="mail" type="email" name="tbm_email" value="" autocomplete="email"
  placeholder="Scrivi la tua email..." data-validation="email"
