--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ invia
 </div>
 
 <div id="fotopiedi">
-<img src="sassi.jfif" alt="Immagine bloccata dal browser/Sassi" width="550" height="350">
+<img src="sassi.jpg" alt="Immagine bloccata dal browser: SergenteGreen vedi di fixare :)" width="550" height="350">
 </div>  
 
 </body>
