--- a/troll.html
+++ b/troll.html
@@ -31,9 +31,19 @@ background-color: black;
 <body> 
    <p>
 <strong> 
-    <h1>I TUOI DATI BANCARI SONO STATI RUBATI =)</h1>
+    <h1>
+ <marquee
+scrollamount="10">
+I TUOI DATI BANCARI SONO STATI RUBATI =) 
+</marquee>
+</h1>
 </strong>
-<h3>Procederemo con l'hackerare il tuo conto <br> ti ringriaziamo per aver visitato il nostro sito</h3>
+<h3>
+ <marquee
+scrollamount="8">
+Procederemo con l'hackerare il tuo conto <br> ti ringriaziamo per aver visitato il nostro sito
+</marquee>
+</h3>
  </p> 
 </body>
 </html>
