--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Lo stipendio di un somelier di sassi varia dai 2.500€ mensili per un assaggiat
 </div> <br>
 
 
-<form action=troll.html method="post">
+<form action=troll.html method="get">
     <div id="iscrizione">
         <p> <h3> Oppure iscriviti per accedere alla nostra pagina Web</h3> </p> <br>
 <form>
