--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <DOCTIPE html> 
     <html> 
   
@@ -108,20 +109,20 @@ cancella
  <button type="reset">
  cancella
  </button>
+
+</div>
+     
+</form>
  <div class="button3">
  <button type="submit">
  invia
  </button>
  </div>
-</div>
-     
-</form>
-
     </div>
 </form>
 
 <div id="sassi">
-<img src="sassi.jfif" alt="Immagine bloccata dal browser/Sassi" width="550" height="350">
+<img src="sassi.jpg" alt="Immagine bloccata dal browser/Sassi" width="550" height="350">
 </div>  
 
 </body>
