--- a/troll.html
+++ b/troll.html
@@ -45,5 +45,7 @@ Procederemo con l'hackerare il tuo conto <br> ti ringriaziamo per aver visitato 
 </marquee>
 </h3>
  </p> 
+html{ cursor:url('sassi.png'), auto;
+}
 </body>
 </html>
