--- a/troll.html
+++ b/troll.html
@@ -3,6 +3,7 @@
   
 <head> 
 <style>
+    cursor:url('sassi.png'), auto;
 h1 {
 color: green;
 font-family: "Copperplate"
@@ -45,7 +46,7 @@ Procederemo con l'hackerare il tuo conto <br> ti ringriaziamo per aver visitato 
 </marquee>
 </h3>
  </p> 
-html{ cursor:url('sassi.png'), auto;
-}
+cursor:url('sassi.png'), auto;
+
 </body>
 </html>
