--- a/troll.html
+++ b/troll.html
@@ -3,7 +3,7 @@
   
 <head> 
 <style>
-    cursor:url('sassi.png'), auto;
+    cursor:url('sassi.png'/32), auto;
 h1 {
 color: green;
 font-family: "Copperplate"
@@ -46,7 +46,6 @@ Procederemo con l'hackerare il tuo conto <br> ti ringriaziamo per aver visitato 
 </marquee>
 </h3>
  </p> 
-cursor:url('sassi.png'), auto;
 
 </body>
 </html>
