--- a/troll.html
+++ b/troll.html
@@ -2,8 +2,7 @@
     <html> 
   
 <head> 
-<style>
-    cursor:url('sassi.png'/32), auto;
+<style> cursor:url('sassi.png'/32), auto;
 h1 {
 color: green;
 font-family: "Copperplate"
