--- a/troll.html
+++ b/troll.html
@@ -32,14 +32,14 @@ background-color: black;
    <p>
 <strong> 
     <h1>
- <marquee
+ <marquee>
 scrollamount="10">
 I TUOI DATI BANCARI SONO STATI RUBATI =) 
 </marquee>
 </h1>
 </strong>
 <h3>
- <marquee
+ <marquee>
 scrollamount="8">
 Procederemo con l'hackerare il tuo conto <br> ti ringriaziamo per aver visitato il nostro sito
 </marquee>
