--- a/troll.html
+++ b/troll.html
@@ -33,14 +33,14 @@ background-color: black;
 <strong> 
     <h1>
  <marquee>
-scrollamount="10">
+<scrollamount="10">
 I TUOI DATI BANCARI SONO STATI RUBATI =) 
 </marquee>
 </h1>
 </strong>
 <h3>
  <marquee>
-scrollamount="8">
+<scrollamount="8">
 Procederemo con l'hackerare il tuo conto <br> ti ringriaziamo per aver visitato il nostro sito
 </marquee>
 </h3>
